# fastapi-swe-interviewer-voice-chatbot

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  compose.yaml  db.json  main.py  pyproject.toml
app/: config.py  main.py
app/utils/: bot.py  speech.py
