[tool.poetry]
name = "fastapi-swe-interviewer-voice-chatbot"
version = "0.1.0"
description = ""
authors = ["Daniel Giao <daniel.giao@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.112.2"}
transformers = "^4.44.2"
tensorflow = "^2.17.0"
tf-keras = "^2.17.0"
torch = "^2.4.0"
aiofiles = "^24.1.0"
requests = "^2.32.3"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
